# OpenSiv3D-CMake-Template

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
src/: main.cpp
